# CMake-practice

./: .gitignore
cmake-presets/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
cmake-tutorial/: CMakeLists.txt  README.md  TutorialConfig.h  TutorialConfig.h.in  tutorial.cpp
cmake-tutorial/MathFunctions/: CMakeLists.txt  mysqrt.cpp
cmake_01/: CMakeLists.txt  main.c
cmake_02/: CMakeLists.txt  main.c
cmake_03/: CMakeLists.txt  main.c
cmake_03/math/: CMakeLists.txt  my_math.c
cmake_04/: CMakeLists.txt  main.c
cmake_04/math/: CMakeLists.txt  my_math.c  my_math.h
cmake_05/: CMakeLists.txt  main.c
